RESOLVED FIXED117071
Fix double hash lookup in PageMapMemoryUsageRecorder::visit
https://bugs.webkit.org/show_bug.cgi?id=117071
Summary Fix double hash lookup in PageMapMemoryUsageRecorder::visit
Rafael Brandao
Reported 2013-05-31 06:38:22 PDT
Fix double hash lookup in PageMapMemoryUsageRecorder::visit
Attachments
Patch (1.24 KB, patch)
2013-05-31 06:39 PDT, Rafael Brandao
no flags
Rafael Brandao
Comment 1 2013-05-31 06:39:28 PDT
Andreas Kling
Comment 2 2013-05-31 06:44:20 PDT
Comment on attachment 203439 [details] Patch LGTM
WebKit Commit Bot
Comment 3 2013-05-31 09:16:01 PDT
Comment on attachment 203439 [details] Patch Clearing flags on attachment: 203439 Committed r151020: <http://trac.webkit.org/changeset/151020>
WebKit Commit Bot
Comment 4 2013-05-31 09:16:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.