Fix double hash lookup in PageMapMemoryUsageRecorder::visit https://bugs.webkit.org/show_bug.cgi?id=117071

Reviewed by Andreas Kling.

* wtf/FastMalloc.cpp:
(WTF::TCMalloc_ThreadCache::CreateCacheIfNecessary):


Canonical link: https://commits.webkit.org/135338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151020 268f45cc-cd09-0410-ab3c-d52691b4dbfc